// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multi command app help 1`] = `
Array [
  "
scripts

  My scripts package 

Synopsis

  $ scripts <command> <options> 

Commands

  lint   lint the project 
  test   test the project 

Global Options

  -v, --verbose    Log a bunch of stuff    
  -h, --help       Display the help output 
",
]
`;

exports[`multi command app w/multi commands sub-multi-command help 1`] = `
Array [
  "
create

  create a new project 

Synopsis

  $ create <command> <options> 

Commands

  component   create a component 
  project     create a project   

Global Options

  --name string    The name of the thing to create 
  -v, --verbose    Log a bunch of stuff            
  -h, --help       Display the help output         
",
]
`;

exports[`multi command app w/multi commands sub-multi-command sub-command help 1`] = `
Array [
  "
project

  create a project 

Options

  --cwd            Use the current working directory 
  --name string    The name of the thing to create   
  -v, --verbose    Log a bunch of stuff              
  -h, --help       Display the help output           

Examples

  create project 
",
]
`;

exports[`single command app help 1`] = `
Array [
  "
echo

  Print a string to the terminal 

Options

  --value string   The value to print      
  -h, --help       Display the help output 

Examples

  echo foo               
  echo \\"Intense message\\" 
",
]
`;
